# langchain-template

./: .env.example  .gitignore  dockerfile  pyproject.toml
src/: app.py
src/agent/: base.py  composer_agent.py  main_agent.py  search_songs_agent.py  weather_agent.py
src/core/: logging.py
src/db/: database.py  message_repository.py  models.py  repository.py  thread_repository.py  tool_call_repository.py
src/model/: chat.py  chunk.py
src/prompt/: prompt.py
src/routes/: chat.py  health.py  threads.py
src/service/: chat.py
src/tools/: composer.py  search_songs.py  weather.py
